# tp-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh  log_file.txt  run.sh
doc/: information_about_map.txt  information_about_tiles.txt  map_file_formant.txt  tiles_information.txt
include/: convert_map_file_to_matrix.h  default_map_settings.h  default_tile_settings.h  game.h  initialization_of_tiles.h  player.h  tile.h  tilemap.h
include/character/: model.h  player.h  view.h
include/tiles/: default_tile_settings.h  initialization_of_tiles.h  tile.h
lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
log_files/: log_file_exe.txt  log_file_install.txt
resources/: map_example.txt
src/: CMakeLists.txt  README.md  convert_map_file_to_matrix.cpp  default_map_settings.cpp  default_tile_settings.cpp  game.cpp  initialization_of_tiles.cpp  main.cpp  player.cpp  tile.cpp  tilemap.cpp
src/character/: .player.cpp.un~  control.cpp  model.cpp  player.cpp  view.cpp
src/include/: tile.h  tilemap.h
src/include/character/: control.h  model.h  player.h
src/tiles/: air_tile.cpp  damage_tile.cpp  default_tile.cpp  default_tile_settings.cpp  tile.cpp
test_build_tile/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake  main.cpp  tileout
